Caterings fix gallery overflow

--- a/app/assets/stylesheets/views/catering.sass
+++ b/app/assets/stylesheets/views/catering.sass
@@ -9,7 +9,7 @@
 
   div.catering-slider
     margin-left: -15px
-    width: 416px
+    max-width: 416px
 
     img
       margin: 0
